php-deployment.yaml
# php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:apache
        ports:
        - containerPort: 80
