noteport.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-nodeport
  namespace: myapp
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000  # Specify a port in the range 30000-32767
  selector:
    app: php
