php-service.yaml
# php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: myapp
spec:
  ports:
    - port: 80
  selector:
    app: php
