postgres-service.yaml
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: myapp
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
